--- a/app/components/binder/Tree.css
+++ b/app/components/binder/Tree.css
@@ -10,7 +10,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: 1px;
     margin-bottom: 3px;
+}
+
+.selected {
+    background-color:  #D8E6F3;
+    color: black;
+    font-weight: 600;
+    border-radius: 2px;
 }
 
 .nameRow > * {
