add renaming to context menu

--- a/app/components/binder/Tree.css
+++ b/app/components/binder/Tree.css
@@ -14,11 +14,15 @@
     margin-bottom: 3px;
 }
 
-.selected {
+.open {
     background-color:  #D8E6F3;
     color: black;
     font-weight: 600;
     border-radius: 2px;
+}
+
+.selected {
+    color: black;
 }
 
 .nameRow > * {
